2006-11-26  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* Doxyfile: Update for 2.1.0b3 snapshot and current Doxygen version (1.5.1).

	* src/rotamer.h, src/rotamer.cpp, src/rotor.h, src/rotor.cpp: First step at
	documentation updates on rotamer/conformer generation routines.

	* src/fingerprint.cpp, src/tokenst.cpp, src/generic.h: Eliminate minor Doxygen
	warnings.

	* src/data.h, src/data.cpp (OBTypeTable::Translate): Add new
	method for returning the translated string as a value --
	simplifies scripting language access.

	* src/mol.h: Documentation updates.

2006-11-25  Noel O'Boyle <baoilleach@gmail.com>

	* windows-vc2005/OBPython/logo.bmp: Replaced logo with one that Geoff
	sent me.

	* scripts/python/pybel.py, testpybel.py, pybelapi.html: Added a
	.close() method to the Outputfile class of Pybel. This uses the
	CloseOutFile() method added by Chris Morley in r1606. This is
	necessary to ensure that all tests pass on Windows.

2006-11-24 Chris Morley <ob@gaseq.co.uk>

	* src/obconversion.cpp(Write),(Read): Check for stream pointers
	being NULL.

	* src/obconversion.h, src/obconversion.cpp: Added CloseOutFile()
	at the suggestion of Noel O'Boyle.
	
2006-11-24  Noel O'Boyle <baoilleach@gmail.com>

	* windows-vc2005: added libxml2.dll (taken from Chris' Windows OB GUI
	distribution)
	* windows-vc2005/OBPython/logo.bmp, setup.py: new files added that
	allow the creation of a Windows OB scripting installer
	* windows-vc2005/OBPython/Readme.txt: Updated with instructions on
	running setup.py

2006-11-23 Chris Morley <ob@gaseq.co.uk>

	* windows-vc2005: Added OBPython project to allow OB to be used
	form Python on Windows.
	
	* src/parsmart.h(SmartsLexReplace), src/ring.h(CompareRingSize):
	Added OBAPI to declarations of these exported global functions.
	
2006-11-20  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/atom.h, src/base.h, src/bond.h, src/residue.h, src/mol.h,
	src/ring.h, src/mol.cpp, src/base.cpp, src/obiter.h: Remove